syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "rpc_create_user.proto";
import "rpc_login_user.proto";
import "rpc_verify_email.proto";
import "rpc_update_user.proto";
import "rpc_send_otp_mail.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/kanishkmittal55/simplebank/pb";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
        title: "Simple Bank API";
        version: "1.1";
        contact: {
            name: "HassleSkip";
            url: "https://github.com/Kanishkmittal55/simplebank";
            email: "kanishkmittal55@gmail.com";
        };
    };
};

service simplebank {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
        option (google.api.http) ={
            post: "/v1/create_user"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this endpoint to create a new user";
            summary: "Create New User";
        };
    }
    rpc LoginUser (LoginUserRequest) returns (LoginUserResponse) {
        option (google.api.http) ={
            post: "/v1/login_user"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this endpoint to login a new user and get access token and refresh token";
            summary: "login New User";
        };
    }
    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {
        option (google.api.http) ={
            patch: "/v1/update_user"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to update user";
            summary: "Update User";
        };
    }
    rpc VerifyEmail (VerifyEmailRequest) returns (VerifyEmailResponse) {
        option (google.api.http) ={
            get: "/v1/verify_email"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this api to verify user's email address";
            summary: "Verify email";
        };
    }
    rpc SendOtpMail (SendOtpMailRequest) returns (SendOtpMailResponse) {
        option (google.api.http) ={
            post: "/v1/send_otp_mail"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this api to send an otp to a registered user on their verified mail id";
            summary: "send otp to user's mail id";
        };
    }
}